attempted to add picture links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <head>
   <title>Fish Pond</title>
+  <style>
+    div{
+      z-index: 2;
+      position:relative;
+    }
+  </style>
 </head>
 
 <body>
   <canvas/>
 
   <script type="application/javascript" src="lib/bundle.js"></script>
+  <div>
+    <a href="#">
+      <img src="./assets/GitHub-Logo.png" />
+    </a>
+    <a href="#">
+      <img src="./assets/GitHub-Logo.png" />
+    </a>
+  </div>
 </body>
 </html>
