scaling for text and button fix beginning

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <head>
   <title>Fish Pond</title>
   <style>
+    body{
+      margin:0;
+      padding:0;
+    }
     div{
       display:flex;
       flex-direction: column;
       margin-top:3vh;
-      margin-right:3vw;
+      margin-right:3vh;
       display:block;
       z-index: 10;
       position:fixed;
